[gd_scene load_steps=26 format=2]

[ext_resource path="res://entities/ui/console.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/player_monitor/player_monitor.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/tcp/both.gd" type="Script" id=3]
[ext_resource path="res://entities/asteroid/asteroid.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/ui/banner.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/input/keyboard_plus_gui.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/tcp/server.gd" type="Script" id=7]
[ext_resource path="res://entities/latency_simulator/latency_simulator.gd" type="Script" id=8]
[ext_resource path="res://scenes/tcp/client.gd" type="Script" id=9]
[ext_resource path="res://entities/world/world.gd" type="Script" id=10]
[ext_resource path="res://entities/tcp/tcp_server.gd" type="Script" id=11]
[ext_resource path="res://entities/kbps/kbps.gd" type="Script" id=12]
[ext_resource path="res://entities/tcp/tcp_client.gd" type="Script" id=13]
[ext_resource path="res://entities/input/keyboard_shortcuts.gd" type="Script" id=14]
[ext_resource path="res://entities/tick/tick.gd" type="Script" id=15]
[ext_resource path="res://entities/serializer/serializer.gd" type="Script" id=16]
[ext_resource path="res://entities/world/client_world.tscn" type="PackedScene" id=17]
[ext_resource path="res://entities/debug_overlay/debug_overlay.tscn" type="PackedScene" id=18]
[ext_resource path="res://entities/menu_button/menu_button.tscn" type="PackedScene" id=19]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0.00392157, 0.384314, 1, 0.23587, 0.248374, 0.460938, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0, 0.00392157, 0.384314, 1, 0.23587, 0.248374, 0.460938, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0, 0.00392157, 0.384314, 1, 0.23587, 0.248374, 0.460938, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[node name="TCPBoth" type="Node"]
script = ExtResource( 3 )

[node name="Server" type="Node" parent="."]
script = ExtResource( 7 )

[node name="DebugOverlay" parent="Server" instance=ExtResource( 18 )]

[node name="TCPServer" type="Node" parent="Server"]
script = ExtResource( 11 )

[node name="LatencySimulator" type="Node" parent="Server"]
script = ExtResource( 8 )
simulate_latency = false

[node name="Background" type="TextureRect" parent="Server"]
margin_left = 608.0
margin_top = -712.0
margin_right = 2108.0
margin_bottom = 788.0
rect_rotation = 44.9999
mouse_filter = 2
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="World" type="Node2D" parent="Server"]
modulate = Color( 0.0941176, 0.933333, 0.0470588, 0.145098 )
script = ExtResource( 10 )

[node name="Background" type="TextureRect" parent="Server/World"]
margin_left = 608.0
margin_top = -712.0
margin_right = 2108.0
margin_bottom = 788.0
rect_rotation = 44.9999
mouse_filter = 2
texture = SubResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMonitor" parent="Server/World" instance=ExtResource( 2 )]
margin_left = 5.0
margin_top = 5.0
margin_right = 1285.0
margin_bottom = 725.0

[node name="Bullets" type="Node2D" parent="Server/World"]

[node name="Ships" type="Node2D" parent="Server/World"]

[node name="Asteroids" type="Node2D" parent="Server/World"]

[node name="Asteroid1" parent="Server/World/Asteroids" instance=ExtResource( 4 )]
position = Vector2( 315.336, 222.286 )

[node name="Asteroid2" parent="Server/World/Asteroids" instance=ExtResource( 4 )]
position = Vector2( 256.401, 533.168 )

[node name="Asteroid3" parent="Server/World/Asteroids" instance=ExtResource( 4 )]
position = Vector2( 932.498, 241.016 )

[node name="Asteroid4" parent="Server/World/Asteroids" instance=ExtResource( 4 )]
position = Vector2( 986.961, 520.447 )

[node name="Players" type="Node2D" parent="Server/World"]

[node name="Serializer" type="Node" parent="Server/World"]
script = ExtResource( 16 )

[node name="Tick" type="Node" parent="Server/World"]
script = ExtResource( 15 )

[node name="Inputs" type="Node" parent="Server"]

[node name="KeyboardShortcuts" type="Node" parent="Server"]
pause_mode = 2
script = ExtResource( 14 )

[node name="UI" type="Control" parent="Server"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" parent="Server/UI" instance=ExtResource( 5 )]

[node name="Console" parent="Server/UI" instance=ExtResource( 1 )]
margin_left = 305.0
margin_top = 470.0
margin_right = -475.0
margin_bottom = 6.10352e-05

[node name="MenuButton" parent="Server/UI" instance=ExtResource( 19 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -105.0
margin_right = -15.0

[node name="Kbps" type="Node" parent="Server"]
script = ExtResource( 12 )

[node name="Client" type="Node" parent="."]
script = ExtResource( 9 )
send_rate_per_second = 60

[node name="DebugOverlay" parent="Client" instance=ExtResource( 18 )]
offset = Vector2( 800, 380 )
transform = Transform2D( 1, 0, 0, 1, 800, 380 )

[node name="TCPClient" type="Node" parent="Client"]
script = ExtResource( 13 )

[node name="LatencySimulator" type="Node" parent="Client"]
script = ExtResource( 8 )
simulate_latency = false
min_latency = 0.03
max_latency = 0.15

[node name="Background" type="TextureRect" parent="Client"]
margin_left = 608.0
margin_top = -712.0
margin_right = 2108.0
margin_bottom = 788.0
rect_rotation = 44.9999
mouse_filter = 2
texture = SubResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LatestReceivedWorld" parent="Client" instance=ExtResource( 17 )]
modulate = Color( 0, 0, 0.501961, 0.196078 )

[node name="Inputs" type="Node" parent="Client"]

[node name="Input" parent="Client/Inputs" instance=ExtResource( 6 )]

[node name="KeyboardShortcuts" type="Node" parent="Client"]
pause_mode = 2
script = ExtResource( 14 )

[node name="UI" type="Control" parent="Client"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" parent="Client/UI" instance=ExtResource( 5 )]

[node name="Console" parent="Client/UI" instance=ExtResource( 1 )]
margin_left = 305.0
margin_top = 470.0
margin_right = -475.0
margin_bottom = 6.10352e-05

[node name="MenuButton" parent="Client/UI" instance=ExtResource( 19 )]

[node name="ReceivedKbps" type="Node" parent="Client"]
script = ExtResource( 12 )

[node name="SentKbps" type="Node" parent="Client"]
script = ExtResource( 12 )
